# PUTGT

./: README.md
Calibration/: CMakeLists.txt  main.cpp
KinectEstiamateToZnacznik/: CMakeLists.txt
KinectEstiamateToZnacznik/cmake/: FindEigen3.cmake~
KinectEstiamateToZnacznik/data/: trajectory5.txt  trajectory9.txt
KinectEstimateToZnacznik/: .cproject  .project  INFO.txt  camData.txt  camPoses.txt  main.cpp
KinectEstimateToZnacznik/data/: cameraZnacznikKin1.txt  cameraZnacznikKin2.txt  groundtruth.txt  trajectory2.txt  trajectory3.txt  trajectory4.txt  trajectory6.txt  trajectory7.txt  trajectory8.txt
KinectPUTGT/: CMakeLists.txt  main.cpp
RealSense/: CMakeLists.txt  sample.cpp
RealSenseCalib/: CMakeLists.txt  calibration.cpp  realSenseCalib.txt
